apps/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-newsify-consolidated-ingress
  namespace: newsify-staging
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - staging.backend.id.vn
    secretName: staging-backend-id-vn-tls
  rules:
  - host: staging.backend.id.vn
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: newsify-backend
            port:
              number: 8080
